src/objects/PagesApi__Menu_Item__c.object
<CustomObject>
    <description>Menu Items create a hierarchy of links to both Pages and Custom Weblinks.</description>
    <fields>
        <fullName>PagesApi__Custom_URL__c</fullName>
        <description>** Conditionally Required ** URL for the Web Link. Required for &quot;Custom URL&quot; Menu Items.</description>
        <inlineHelpText>** Conditionally Required ** URL for the Web Link. Required for &quot;Custom URL&quot; Menu Items.</inlineHelpText>
        <label>Custom URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PagesApi__Display_Order__c</fullName>
        <description>** Required ** The order in which this Menu Item should display.</description>
        <inlineHelpText>** Required ** The order in which this Menu Item should display.</inlineHelpText>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PagesApi__Display_Text__c</fullName>
        <description>** Conditionally Required ** The text to display for &quot;Text&quot; Menu Items.</description>
        <inlineHelpText>** Conditionally Required ** The text to display for &quot;Text&quot; Menu Items.</inlineHelpText>
        <label>Display Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PagesApi__Icon__c</fullName>
        <description>Optional icon to use in context with the Menu Item. Note! Icon fonts are available only if you define links to the Stylesheets containing their definitions in either the Theme or in a Site&apos;s Global CSS.</description>
        <inlineHelpText>Optional icon to use in context with the Menu Item. Note! Icon fonts are available only if you define links to the Stylesheets containing their definitions in either the Theme or in a Site&apos;s Global CSS.</inlineHelpText>
        <label>Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Is_Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** SYSTEM **</description>
        <inlineHelpText>** SYSTEM **</inlineHelpText>
        <label>Is Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Link_Target__c</fullName>
        <description>Specifies how target link is opened in the browser. Valid values include &quot;_self&quot; to open in the same tab, and &quot;_blank&quot; to open in a new window or tab.</description>
        <inlineHelpText>Used for the target attribute for the &quot;a&quot; html tag. Valid values include &quot;_Blank&quot; or &quot;_Tab&quot; among others.</inlineHelpText>
        <label>Link Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Menu_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the parent Menu Item.</description>
        <inlineHelpText>Link to the parent Menu Item.</inlineHelpText>
        <label>Parent</label>
        <referenceTo>PagesApi__Menu_Item__c</referenceTo>
        <relationshipLabel>Menu Items</relationshipLabel>
        <relationshipName>Menu_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__Menu__c</fullName>
        <description>** Required ** Master-detail link to the parent Menu.</description>
        <inlineHelpText>** Required ** Master-detail link to the parent Menu.</inlineHelpText>
        <label>Menu</label>
        <referenceTo>PagesApi__Menu__c</referenceTo>
        <relationshipLabel>Menu Items</relationshipLabel>
        <relationshipName>Menu_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>PagesApi__On_Click_Javascript__c</fullName>
        <description>Javascript to run for the &quot;on click&quot; event (when the Menu Item is clicked).</description>
        <inlineHelpText>Javascript to run for the &quot;on click&quot; event (when the Menu Item is clicked).</inlineHelpText>
        <label>On Click Javascript</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PagesApi__Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Conditionally Required ** When the Type of Menu Item is &quot;Page Link&quot;.</description>
        <inlineHelpText>** Conditionally Required ** When the Type of Menu Item is &quot;Page Link&quot;.</inlineHelpText>
        <label>Page</label>
        <referenceTo>PagesApi__Page__c</referenceTo>
        <relationshipLabel>Menu Items</relationshipLabel>
        <relationshipName>Menu_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__Style_Class__c</fullName>
        <description>Custom CSS Style Class to use for the Menu Item.</description>
        <inlineHelpText>Custom CSS Style Class to use for the Menu Item.</inlineHelpText>
        <label>Style Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Type__c</fullName>
        <description>** Required ** The Type of Menu Item defaults to &quot;Page Link&quot;.</description>
        <inlineHelpText>** Required ** The Type of Menu Item defaults to &quot;Page Link&quot;.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom Page</fullName>
                    <default>true</default>
                    <label>Custom Page</label>
                </value>
                <value>
                    <fullName>Custom URL</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>On Click Javascript</fullName>
                </value>
                <value>
                    <fullName>Standard Page</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PagesApi__Value__c</fullName>
        <description>** SYSTEM **</description>
        <inlineHelpText>** SYSTEM **</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Menu Item</label>
    <nameField>
        <label>Display Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Menu Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>